--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "GITHUB_TOKEN": "@github_token",
     "OWNER": "@github_owner",
     "REPO": "@github_repo",
-    "BRANCH": "@main"
+    "BRANCH": "main"
   },
   "builds": [
     {
