--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
   "env": {
-    "GITHUB_TOKEN": "@github_token",
-    "OWNER": "@github_owner",
-    "REPO": "@github_repo",
-    "BRANCH": "main"
+    "GITHUB_TOKEN": "@GITHUB_TOKEN",
+    "OWNER": "@OWNER",
+    "REPO": "@REPO",
+    "BRANCH": "@BRANCH"
   },
   "builds": [
     {
